web-infras/parser/tests/fixtures/babel/es2022/module-string-names/duplicate-exported-binding-check/output.txt
[SyntaxError]: Identifier has already been declared. (2,22)
2|export { foo, bar as "foo" }
 |                    ^
